revisão para remoção de warnings